--- a/css/custom.css
+++ b/css/custom.css
@@ -12,19 +12,19 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #3498db;
+    background-color: #7ee0e4;
 }
 
 .box {
     width: 700px;
     min-height: 500px;
-    background-color: white;
+    background-color: rgb(154, 235, 117);
     border-radius: 5px;
     padding: 15px;
 }
 
 #item {
-    padding: 10px;
+    padding: 13px;
     font-size: 20px;
     width: 100%;
     border: 0;
@@ -42,7 +42,7 @@ main {
 #to-do-box li {
     position: relative;
     background-color: #2c3e50;
-    color: white;
+    color: rgb(223, 50, 50);
     padding: 10px;
     border-radius: 2px;
     padding-right: 30px;
@@ -60,5 +60,5 @@ main {
 .done {
     text-decoration: line-through;
     color: black;
-    background-color: #95a5a6 !important;
+    background-color: #0dd1df !important;
 }
