--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #7ee0e4;
+   // background-color: #7ee0e4;
+    background-color: #fff;
 }
 
 .box {
