--- a/css/custom.css
+++ b/css/custom.css
@@ -1,38 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 * {
-    padding: 0;
-    margin: 0;
+    padding: 1;
+    margin: 1;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
 main {
-    width: 121%;
-    height: 121vh;
+    width: 120%;
+    height: 120vh;
     display: flex;
     justify-content: center;
     align-items: center;
-   // background-color: #7ee0e4;
-    background-color: #eee;
+   // background-color: #7ee0e5;
+    background-color: #fff;
 }
 
 .box {
-    width: 701px;
-    min-height: 501px;
-    background-color: rgb(156, 235, 117);
+    width: 700px;
+    min-height: 500px;
+    background-color: rgb(156, 234, 117);
     border-radius: 5px;
-    padding: 15px;
+    padding: 16px;
 }
 
 #item {
     padding: 15px;
-    font-size: 22px;
-    width: 111%;
-    border: 2;
+    font-size: 23px;
+    width: 100%;
+    border: 1;
     outline: 1;
     display: block;
     font-weight: bold;
-    box-shadow: 1px 1px 2px grey;
+    box-shadow: 1px 2px 2px grey;
 }
 
 #to-do-box {
@@ -44,7 +44,7 @@ main {
     position: relative;
     background-color: #2c3e51;
     color: rgb(223, 60, 55);
-    padding: 11px;
+    padding: 10px;
     border-radius: 3px;
     padding-right: 30px;
     text-align: justify;
@@ -61,5 +61,5 @@ main {
 .done {
     text-decoration: line-through;
     color: black;
-    background-color: #0dd1df !important;
+    background-color: #0dd1de !important;
 }
