--- a/css/custom.css
+++ b/css/custom.css
@@ -1,42 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 * {
-    padding: 2;
-    margin: 2;
+    padding: 1;
+    margin: 1;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
 main {
-    width: 120%;
-    height: 121vh;
+    width: 121%;
+    height: 120vh;
     display: flex;
     justify-content: center;
     align-items: center;
-   // background-color: #7ee0e5;
-    background-color: #fff;
+   // background-color: #7ee0e4;
+    background-color: #ffff;
 }
 
 .box {
-    width: 701px;
-    min-height: 501px;
-    background-color: rgb(155, 234, 117);
-    border-radius: 6px;
-    padding: 18px;
+    width: 700px;
+    min-height: 500px;
+    background-color: rgb(155, 235, 117);
+    border-radius: 5px;
+    padding: 20px;
 }
 
 #item {
-    padding: 16px;
-    font-size: 24px;
-    width: 100%;
-    border: 1;
-    outline: 2;
+    padding: 15px;
+    font-size: 25px;
+    width: 99%;
+    border: 2;
+    outline: 1;
     display: block;
     font-weight: bold;
-    box-shadow: 1px 2px 2px grey;
+    box-shadow: 2px 2px 2px grey;
 }
 
 #to-do-box {
-    margin-top: 23px;
+    margin-top: 22px;
     list-style: none;
 }
 
@@ -44,18 +44,18 @@ main {
     position: relative;
     background-color: #2c3e51;
     color: rgb(223, 60, 55);
-    padding: 11px;
-    border-radius: 4px;
-    padding-right: 32px;
+    padding: 10px;
+    border-radius: 3px;
+    padding-right: 30px;
     text-align: justify;
-    margin-top: 11px;
+    margin-top: 10px;
     user-select: none;
 }
 
 #to-do-box li i {
     position: absolute;
-    right: 21px;
-    top: 11px;
+    right: 20px;
+    top: 10px;
 }
 
 .done {
